HVAC Backup 2/objects/Downloading_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>CP__c</fullName>
        <label>CP%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Type__c</fullName>
        <label>Channel Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel_Partner_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Combined_String__c</fullName>
        <description>Text(Contract_Type__c) + Department__c +Text (Channel_Partner_Type__c)+ Product_Sub_Family__c</description>
        <formula>Text(Contract_Type__c) + Department__c + TEXT(Channel_Partner_Type__c )+ CASESAFEID (Product_Sub_Family__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product  Sub Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Downloading Matrices</relationshipLabel>
        <relationshipName>Downloading_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Downloading Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract_Type__c</columns>
        <columns>Channel_Partner_Type__c</columns>
        <columns>Department__c</columns>
        <columns>Product_Sub_Family__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel_Partner_Type__c</field>
            <operation>equals</operation>
            <value>ESA,SA,BA,DLR,SSD</value>
        </filters>
        <filters>
            <field>Product_Sub_Family__c</field>
            <operation>contains</operation>
            <value>Reach</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>58</value>
        </filters>
        <filters>
            <field>Contract_Type__c</field>
            <operation>equals</operation>
            <value>RPC</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Downloading Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Downloading Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>